# change-logger

./: .gitignore  README.md  install.sh  pyproject.toml
resources/: prompts.yml
src/change_logger_agent/: README.md  __init__.py  llm.py  main.py  models.py  template.py
src/change_logger_cli/: README.md  __init__.py  client.py  git.py  main.py  models.py
tests/change_logger_agent/: conftest.py  test_integration.py  test_llm.py  test_main.py  test_models.py  test_prompt.py
